# puma

./: .dockerignore  .gitignore  INSTALL.md  LICENSE.txt  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
apps/: run_poisson.py
apps/config/: gicp.yml  p2l_icp.yml  p2p_icp.yml  puma.yml
apps/data_conversion/: bin2bag.py  bin2ply.py  ply2bin.py  ros2ply.py
apps/pipelines/mapping/: build_gt_cloud.py  build_gt_mesh.py  build_gt_mesh_incremental.py
apps/pipelines/odometry/: icp_frame_2_frame.py  icp_frame_2_map.py  icp_frame_2_mesh.py
apps/pipelines/slam/: puma_pipeline.py
docker/: README.md
docker/apps/: Dockerfile
docker/builder/: Dockerfile
puma/cpp/: gen_normal_map.cpp
puma/mesh/: __init__.py  poisson.py  size.py
puma/preprocessing/: __init__.py  preprocess_cloud.py  range_image_normal.py
puma/projections/: __init__.py  range_image.py  scan2mesh.py
puma/registration/: __init__.py  method_selector.py  o3d_aliases.py  run_icp.py  scan2mesh.py  scan2mesh_icp.py
puma/utils/: __init__.py  calibration.py  circular_buffer.py  config.py  kitti_poses.py  progress_bar.py  save_geoms.py  timeit.py
