[metadata]
name = puma
author = Ignacio Martin Vizzo (aka Nacho) and Cyrill Stachniss
author_email = ignaciovizzo@gmail.com
license_files = LICENSE.txt
description = Poisson Surface Reconstruction for LiDAR Odometry and Mapping
long_description = file:README.md
long_description_content_type = text/markdown
version = attr: puma.__version__
url = https://github.com/PRBonn/puma
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
keywords = SLAM, LiDAR, Odometry, Localization, Mapping,

[options]
packages = find:
install_requires =
    Click
    PyYAML
    easydict
    matplotlib
    numpy
    pykitti
    tqdm
    trimesh

[flake8]
max-line-length = 80
extend-ignore = E203
